--- a/python/src/models/APID&HuRI Classifiers Multiple FS.ipynb
+++ b/python/src/models/APID&HuRI Classifiers Multiple FS.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ebce7fbd",
    "metadata": {},
    "outputs": [],
@@ -30,21 +30,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bc5838ad",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": "(function(on) {\nconst e=$( \"<a>Setup failed</a>\" );\nconst ns=\"js_jupyter_suppress_warnings\";\nvar cssrules=$(\"#\"+ns);\nif(!cssrules.length) cssrules = $(\"<style id='\"+ns+\"' type='text/css'>div.output_stderr { } </style>\").appendTo(\"head\");\ne.click(function() {\n    var s='Showing';  \n    cssrules.empty()\n    if(on) {\n        s='Hiding';\n        cssrules.append(\"div.output_stderr, div[data-mime-type*='.stderr'] { display:none; }\");\n    }\n    e.text(s+' warnings (click to toggle)');\n    on=!on;\n}).click();\n$(element).append(e);\n})(true);\n",
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%javascript\n",
     "(function(on) {\n",
@@ -76,29 +65,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "a2d394ef",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reactome_indices = pd.read_csv('../../data/processed/fs/custom_indices/reactome_indices.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b219c68f",
    "metadata": {},
    "outputs": [],
    "source": [
     "reactome_labels_df = pd.read_csv('../../data/processed/reactome_labels_apid_huri.csv', header = None)\n",
     "reactome_labels = reactome_labels_df.transpose().to_numpy(dtype='int')\n",
-    "reactome_labels_df.index= pd.read_csv(\"../../data/processed/metrics/process_hypergeometric_apid_huri.csv\", sep=',', header=0, index_col=0).index"
+    "reactome_labels_df.index= pd.read_csv(\"../../data/processed/metrics/process_hypergeometric_apid_huri.csv\", sep=',', header=0, index_col=0).index\n",
+    "reactome_labels_df.columns= pd.read_csv(\"../../data/processed/metrics/process_hypergeometric_apid_huri.csv\", sep=',', header=0, index_col=0).columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "6aab1581",
    "metadata": {},
    "outputs": [],
@@ -124,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5d908579",
    "metadata": {},
    "outputs": [],
@@ -150,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "cddf21d5",
    "metadata": {},
    "outputs": [],
@@ -161,17 +141,17 @@
     "reactome_rwr_test_index = pd.read_csv(\"../../data/processed/fs/reactome_rwr_test_apid_huri.csv\", sep=',', header=0).transpose().to_numpy(dtype='int')-1\n",
     "reactome_fraction_betweenness_test_index = pd.read_csv(\"../../data/processed/fs/reactome_fraction_betweenness_test_apid_huri.csv\", sep=',', header=0).transpose().to_numpy(dtype='int')-1\n",
     "\n",
-    "reactome_hypergeometric_80_test_index = np.array(np.array_split(pd.read_csv(\"../../data/processed/fs/reactome_hyper_80_test_apid_huri.csv\", sep=',', header=0).transpose(), 10, axis = 1)).astype(int) -1\n",
-    "reactome_closeness_80_test_index = np.array(np.array_split(pd.read_csv(\"../../data/processed/fs/reactome_closeness_80_test_apid_huri.csv\", sep=',', header=0).transpose(), 10, axis = 1)).astype(int) -1\n",
-    "reactome_betweenness_80_test_index = np.array(np.array_split(pd.read_csv(\"../../data/processed/fs/reactome_betweenness_80_test_apid_huri.csv\", sep=',', header=0).transpose(), 10, axis = 1)).astype(int) -1\n",
-    "reactome_rwr_80_test_index = np.array(np.array_split(pd.read_csv(\"../../data/processed/fs/reactome_rwr_80_test_apid_huri.csv\", sep=',', header=0).transpose(), 10, axis = 1)).astype(int) -1\n",
-    "reactome_fraction_betweenness_80_test_index = np.array(np.array_split(pd.read_csv(\"../../data/processed/fs/reactome_fraction_betweenness_80_test_apid_huri.csv\", sep=',', header=0).transpose(), 10, axis = 1)).astype(int) -1\n",
+    "reactome_hypergeometric_80_test_index = np.array(np.array_split(pd.read_csv(\"../../data/processed/fs/reactome_hyper_80_test_apid_huri.csv\", sep=',', header=0).transpose(), 429, axis = 1)).astype(int) -1\n",
+    "reactome_closeness_80_test_index = np.array(np.array_split(pd.read_csv(\"../../data/processed/fs/reactome_closeness_80_test_apid_huri.csv\", sep=',', header=0).transpose(), 429, axis = 1)).astype(int) -1\n",
+    "reactome_betweenness_80_test_index = np.array(np.array_split(pd.read_csv(\"../../data/processed/fs/reactome_betweenness_80_test_apid_huri.csv\", sep=',', header=0).transpose(), 429, axis = 1)).astype(int) -1\n",
+    "reactome_rwr_80_test_index = np.array(np.array_split(pd.read_csv(\"../../data/processed/fs/reactome_rwr_80_test_apid_huri.csv\", sep=',', header=0).transpose(), 429, axis = 1)).astype(int) -1\n",
+    "reactome_fraction_betweenness_80_test_index = np.array(np.array_split(pd.read_csv(\"../../data/processed/fs/reactome_fraction_betweenness_80_test_apid_huri.csv\", sep=',', header=0).transpose(), 429, axis = 1)).astype(int) -1\n",
     "\n",
-    "reactome_hypergeometric_protein80_test_index = np.array(np.array_split(pd.read_csv(\"../../data/processed/fs/reactome_hyper_protein80_test_apid_huri.csv\", sep=',', header=0).transpose(), 10, axis = 1)).astype(int) -1\n",
-    "reactome_closeness_protein80_test_index = np.array(np.array_split(pd.read_csv(\"../../data/processed/fs/reactome_closeness_protein80_test_apid_huri.csv\", sep=',', header=0).transpose(), 10, axis = 1)).astype(int) -1\n",
-    "reactome_betweenness_protein80_test_index = np.array(np.array_split(pd.read_csv(\"../../data/processed/fs/reactome_betweenness_protein80_test_apid_huri.csv\", sep=',', header=0).transpose(), 10, axis = 1)).astype(int) -1\n",
-    "reactome_rwr_protein80_test_index = np.array(np.array_split(pd.read_csv(\"../../data/processed/fs/reactome_rwr_protein80_test_apid_huri.csv\", sep=',', header=0).transpose(), 10, axis = 1)).astype(int) -1\n",
-    "reactome_fraction_betweenness_protein80_test_index = np.array(np.array_split(pd.read_csv(\"../../data/processed/fs/reactome_fraction_betweenness_protein80_test_apid_huri.csv\", sep=',', header=0).transpose(), 10, axis = 1)).astype(int) -1"
+    "reactome_hypergeometric_protein80_test_index = np.array(np.array_split(pd.read_csv(\"../../data/processed/fs/reactome_hyper_protein80_test_apid_huri.csv\", sep=',', header=0).transpose(), 429, axis = 1)).astype(int) -1\n",
+    "reactome_closeness_protein80_test_index = np.array(np.array_split(pd.read_csv(\"../../data/processed/fs/reactome_closeness_protein80_test_apid_huri.csv\", sep=',', header=0).transpose(), 429, axis = 1)).astype(int) -1\n",
+    "reactome_betweenness_protein80_test_index = np.array(np.array_split(pd.read_csv(\"../../data/processed/fs/reactome_betweenness_protein80_test_apid_huri.csv\", sep=',', header=0).transpose(), 429, axis = 1)).astype(int) -1\n",
+    "reactome_rwr_protein80_test_index = np.array(np.array_split(pd.read_csv(\"../../data/processed/fs/reactome_rwr_protein80_test_apid_huri.csv\", sep=',', header=0).transpose(), 429, axis = 1)).astype(int) -1\n",
+    "reactome_fraction_betweenness_protein80_test_index = np.array(np.array_split(pd.read_csv(\"../../data/processed/fs/reactome_fraction_betweenness_protein80_test_apid_huri.csv\", sep=',', header=0).transpose(), 429, axis = 1)).astype(int) -1"
    ]
   },
   {
@@ -271,8 +251,8 @@
     "             'solver': ['sag', 'saga', 'newton-cg'], 'max_iter':[10, 50, 100]}]\n",
     "\n",
     "hyper_lgr_clf, hyper_lgr_proba_clf, hyper_cv, hyper_n_fs, hyper_models = classifiers.multiple_fs_classifier2(clf, parameters, reactome_hypergeometric, reactome_hypergeometric_test_index, reactome_hypergeometric_fs_ar, reactome_labels_df, jobs=2)\n",
-    "hyper_lgr_clf.to_csv('../../models/GAP-MINE/process/binary/disease_hypergeometric_lgr.csv', index=False)\n",
-    "hyper_lgr_proba_clf.to_csv('../../models/GAP-MINE/process/probability/disease_hypergeometric_lgr_proba.csv', index=False)\n",
+    "hyper_lgr_clf.to_csv('../../models/GAP-MINE/process/binary/hypergeometric_lgr.csv', index=False)\n",
+    "hyper_lgr_proba_clf.to_csv('../../models/GAP-MINE/process/probability/hypergeometric_lgr_proba.csv', index=False)\n",
     "with open('../../models/GAP-MINE/process/cv_results/hypergeometric.txt', 'w') as fp:\n",
     "    fp.write('\\n'.join('%s %s' % x for x in hyper_cv))\n",
     "with open(\"../../models/GAP-MINE/process/n_fs/hypergeometric.txt\", \"w\") as f:\n",
@@ -297,8 +277,8 @@
     "              {'penalty':['l2', 'none'], 'C':[100, 10, 1.0, 0.1, 0.01],\n",
     "             'solver': ['sag', 'saga', 'newton-cg'], 'max_iter':[10, 50, 100]}]\n",
     "rwr_lgr_clf, rwr_lgr_proba_clf, rwr_cv, rwr_n_fs, rwr_models = classifiers.multiple_fs_classifier2(clf, parameters, reactome_rwr, reactome_rwr_test_index, reactome_rwr_fs_ar, reactome_labels_df, jobs=20)\n",
-    "rwr_lgr_clf.to_csv('../../models/GAP-MINE/process/binary/disease_rwr_lgr.csv', index=False)\n",
-    "rwr_lgr_proba_clf.to_csv('../../models/GAP-MINE/process/probability/disease_rwr_lgr_proba.csv', index=False)\n",
+    "rwr_lgr_clf.to_csv('../../models/GAP-MINE/process/binary/rwr_lgr.csv', index=False)\n",
+    "rwr_lgr_proba_clf.to_csv('../../models/GAP-MINE/process/probability/rwr_lgr_proba.csv', index=False)\n",
     "with open('../../models/GAP-MINE/process/cv_results/rwr.txt', 'w') as fp:\n",
     "    fp.write('\\n'.join('%s %s' % x for x in rwr_cv))\n",
     "with open(\"../../models/GAP-MINE/process/n_fs/rwr.txt\", \"w\") as f:\n",
@@ -322,8 +302,8 @@
     "              {'penalty':['l2', 'none'], 'C':[100, 10, 1.0, 0.1, 0.01],\n",
     "             'solver': ['sag', 'saga', 'newton-cg'], 'max_iter':[10, 50, 100]}]\n",
     "closeness_lgr_clf, closeness_lgr_proba_clf, closeness_cv, closeness_n_fs, closeness_models = classifiers.multiple_fs_classifier2(clf, parameters, reactome_closeness, reactome_closeness_test_index, reactome_closeness_fs_ar, reactome_labels, jobs=20)\n",
-    "closeness_lgr_clf.to_csv('../../models/GAP-MINE/disease/binary/disease_closeness_lgr.csv', index=False)\n",
-    "closeness_lgr_proba_clf.to_csv('../../models/GAP-MINE/disease/probability/disease_closeness_lgr_proba.csv', index=False)\n",
+    "closeness_lgr_clf.to_csv('../../models/GAP-MINE/disease/binary/closeness_lgr.csv', index=False)\n",
+    "closeness_lgr_proba_clf.to_csv('../../models/GAP-MINE/disease/probability/closeness_lgr_proba.csv', index=False)\n",
     "with open('../../models/GAP-MINE/disease/cv_results/closeness.txt', 'w') as fp:\n",
     "    fp.write('\\n'.join('%s %s' % x for x in closeness_cv))\n",
     "with open(\"../../models/GAP-MINE/disease/n_fs/closeness.txt\", \"w\") as f:\n",
@@ -348,8 +328,8 @@
     "              {'penalty':['l2', 'none'], 'C':[100, 10, 1.0, 0.1, 0.01],\n",
     "             'solver': ['sag', 'saga', 'newton-cg'], 'max_iter':[10, 50, 100]}]\n",
     "betweenness_lgr_clf, betweenness_lgr_proba_clf, betweenness_cv, betweenness_n_fs, betweenness_models = classifiers.multiple_fs_classifier(clf, parameters, reactome_betweenness, reactome_betweenness_test_index, reactome_betweenness_fs_ar, reactome_labels_df, jobs=20)\n",
-    "betweenness_lgr_clf.to_csv('../../models/GAP-MINE/process/binary/disease_betweenness_lgr.csv', index=False)\n",
-    "betweenness_lgr_proba_clf.to_csv('../../models/GAP-MINE/process/probability/disease_betweenness_lgr_proba.csv', index=False)\n",
+    "betweenness_lgr_clf.to_csv('../../models/GAP-MINE/process/binary/betweenness_lgr.csv', index=False)\n",
+    "betweenness_lgr_proba_clf.to_csv('../../models/GAP-MINE/process/probability/betweenness_lgr_proba.csv', index=False)\n",
     "with open('../../models/GAP-MINE/process/cv_results/betweenness.txt', 'w') as fp:\n",
     "    fp.write('\\n'.join('%s %s' % x for x in betweenness_cv))\n",
     "with open(\"../../models/GAP-MINE/process/n_fs/betweenness.txt\", \"w\") as f:\n",
@@ -373,8 +353,8 @@
     "              {'penalty':['l2', 'none'], 'C':[100, 10, 1.0, 0.1, 0.01],\n",
     "             'solver': ['sag', 'saga', 'newton-cg'], 'max_iter':[10, 50, 100]}]\n",
     "fraction_betweenness_lgr_clf, fraction_betweenness_lgr_proba_clf, fraction_betweenness_cv, fraction_betweenness_n_fs, fraction_betweenness_models = classifiers.multiple_fs_classifier(clf, parameters, reactome_fraction_betweenness, reactome_fraction_betweenness_test_index, reactome_fraction_betweenness_fs_ar, reactome_labels_df, jobs=20)\n",
-    "fraction_betweenness_lgr_clf.to_csv('../../models/GAP-MINE/process/binary/disease_fraction_betweenness_lgr.csv', index=False)\n",
-    "fraction_betweenness_lgr_proba_clf.to_csv('../../models/GAP-MINE/process/probability/disease_fraction_betweenness_lgr.csv', index=False)\n",
+    "fraction_betweenness_lgr_clf.to_csv('../../models/GAP-MINE/process/binary/fraction_betweenness_lgr.csv', index=False)\n",
+    "fraction_betweenness_lgr_proba_clf.to_csv('../../models/GAP-MINE/process/probability/fraction_betweenness_lgr.csv', index=False)\n",
     "with open('../../models/GAP-MINE/process/cv_results/fraction_betweenness.txt', 'w') as fp:\n",
     "    fp.write('\\n'.join('%s %s' % x for x in fraction_betweenness_cv))\n",
     "with open(\"../../models/GAP-MINE/process/n_fs/fraction_betweenness.txt\", \"w\") as f:\n",
@@ -574,7 +554,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -588,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
