--- a/python/src/visualization/Wilcoxon Tests.ipynb
+++ b/python/src/visualization/Wilcoxon Tests.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "process_raw_threshold = pd.read_csv('../../models/threshold_classifier/process/process_raw_simple.csv')\n",
+    "process_genepanda_threshold = pd.read_csv('../../models/threshold_classifier/process/process_genepanda_simple.csv')\n",
+    "process_maxlink_threshold = pd.read_csv('../../models/threshold_classifier/process/process_maxlink_simple.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,21 +135,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hypergeometric_threshold = pd.read_csv('../../models/threshold_classifier/disease/disease/disease_hypergeometric_simple.csv')\n",
-    "closeness_threshold = pd.read_csv('../../models/threshold_classifier/disease/disease/disease_closeness_simple.csv')\n",
-    "betweenness_threshold = pd.read_csv('../../models/threshold_classifier/disease/disease/disease_betweenness_simple.csv')\n",
-    "rwr_threshold = pd.read_csv('../../models/threshold_classifier/disease/disease/disease_rwr_simple.csv')\n",
-    "fraction_betweenness_threshold = pd.read_csv('../../models/threshold_classifier/disease/disease/disease_fraction_betweenness_simple.csv')\n",
+    "hypergeometric_threshold = pd.read_csv('../../models/threshold_classifier/disease/disease_hypergeometric_simple.csv')\n",
+    "closeness_threshold = pd.read_csv('../../models/threshold_classifier/disease/disease_closeness_simple.csv')\n",
+    "betweenness_threshold = pd.read_csv('../../models/threshold_classifier/disease/disease_betweenness_simple.csv')\n",
+    "rwr_threshold = pd.read_csv('../../models/threshold_classifier/disease/disease_rwr_simple.csv')\n",
+    "fraction_betweenness_threshold = pd.read_csv('../../models/threshold_classifier/disease/disease_fraction_betweenness_simple.csv')\n",
     "\n",
-    "hypergeometric_threshold_conservative = pd.read_csv('../../models/threshold_classifier/disease/disease/disease_hypergeometric_simple_conservative.csv')\n",
-    "closeness_threshold_conservative = pd.read_csv('../../models/threshold_classifier/disease/disease/disease_closeness_simple_conservative.csv')\n",
-    "betweenness_threshold_conservative = pd.read_csv('../../models/threshold_classifier/disease/disease/disease_betweenness_simple_conservative.csv')\n",
-    "rwr_threshold_conservative = pd.read_csv('../../models/threshold_classifier/disease/disease/disease_rwr_simple_conservative.csv')\n",
-    "fraction_betweenness_threshold_conservative = pd.read_csv('../../models/threshold_classifier/disease/disease/disease_fraction_betweenness_simple_conservative.csv')"
+    "hypergeometric_threshold_conservative = pd.read_csv('../../models/threshold_classifier/disease/disease_hypergeometric_simple_conservative.csv')\n",
+    "closeness_threshold_conservative = pd.read_csv('../../models/threshold_classifier/disease/disease_closeness_simple_conservative.csv')\n",
+    "betweenness_threshold_conservative = pd.read_csv('../../models/threshold_classifier/disease/disease_betweenness_simple_conservative.csv')\n",
+    "rwr_threshold_conservative = pd.read_csv('../../models/threshold_classifier/disease/disease_rwr_simple_conservative.csv')\n",
+    "fraction_betweenness_threshold_conservative = pd.read_csv('../../models/threshold_classifier/disease/disease_fraction_betweenness_simple_conservative.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_threshold = pd.read_csv('../../models/threshold_classifier/disease/disease_raw_simple.csv')\n",
+    "raw_threshold_conservative = pd.read_csv('../../models/threshold_classifier/disease/disease_raw_simple_conservative.csv')\n",
+    "genepanda_threshold = pd.read_csv('../../models/threshold_classifier/disease/disease_genepanda_simple.csv')\n",
+    "genepanda_threshold_conservative = pd.read_csv('../../models/threshold_classifier/disease/disease_genepanda_simple_conservative.csv')\n",
+    "maxlink_threshold = pd.read_csv('../../models/threshold_classifier/disease/disease_maxlink_simple.csv')\n",
+    "maxlink_threshold_conservative = pd.read_csv('../../models/threshold_classifier/disease/disease_maxlink_simple_conservative.csv')"
    ]
   },
   {
@@ -150,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,6 +590,212 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GAP-MINE vs. Reference Methods\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>f_measure</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>mcc</th>\n",
+       "      <th>precision@15</th>\n",
+       "      <th>precision@20</th>\n",
+       "      <th>precision@n_positives</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Raw</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00981</td>\n",
+       "      <td>0.00014</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GenePANDA</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MaxLink</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           f_measure  precision  recall  mcc  precision@15  precision@20  \\\n",
+       "Raw              0.0        0.0     0.0  0.0       0.00981       0.00014   \n",
+       "GenePANDA        0.0        0.0     0.0  0.0       0.00000       0.00000   \n",
+       "MaxLink          0.0        0.0     0.0  0.0       0.00000       0.00000   \n",
+       "\n",
+       "           precision@n_positives  \n",
+       "Raw                          0.0  \n",
+       "GenePANDA                    0.0  \n",
+       "MaxLink                      0.0  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pairs={'Raw':[rwr_threshold, raw_threshold],\n",
+    "        'GenePANDA':[rwr_threshold, genepanda_threshold],\n",
+    "        'MaxLink':[rwr_threshold, maxlink_threshold]}\n",
+    "\n",
+    "print('GAP-MINE vs. Reference Methods')\n",
+    "hypothesis_testing(pairs, 'greater')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GAP-MINE vs. Reference Methods (Conservative)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>f_measure</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>mcc</th>\n",
+       "      <th>precision@15</th>\n",
+       "      <th>precision@20</th>\n",
+       "      <th>precision@n_positives</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Raw</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00001</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GenePANDA</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MaxLink</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           f_measure  precision  recall  mcc  precision@15  precision@20  \\\n",
+       "Raw              0.0        0.0     0.0  0.0       0.00001           0.0   \n",
+       "GenePANDA        0.0        0.0     0.0  0.0       0.00000           0.0   \n",
+       "MaxLink          0.0        0.0     0.0  0.0       0.00000           0.0   \n",
+       "\n",
+       "           precision@n_positives  \n",
+       "Raw                          0.0  \n",
+       "GenePANDA                    0.0  \n",
+       "MaxLink                      0.0  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pairs={'Raw':[rwr_threshold_conservative, raw_threshold_conservative],\n",
+    "        'GenePANDA':[rwr_threshold_conservative, genepanda_threshold_conservative],\n",
+    "        'MaxLink':[rwr_threshold_conservative, maxlink_threshold_conservative]}\n",
+    "\n",
+    "print('GAP-MINE vs. Reference Methods (Conservative)')\n",
+    "hypothesis_testing(pairs, 'greater')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -580,14 +811,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability FS vs. Threshold (PPI 80%)\n"
+      "GAP-MINE vs. Threshold (PPI 80%)\n"
      ]
     },
     {
@@ -691,7 +922,7 @@
        "RWR                            0.0                    0.0  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,14 +940,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability FS vs. Threshold (Protein 80%)\n"
+      "GAP-MINE vs. Threshold (Protein 80%)\n"
      ]
     },
     {
@@ -820,7 +1051,7 @@
        "RWR                            0.0                    0.0  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,14 +1076,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability FS vs. Threshold (PPI 80%)\n"
+      "GAP-MINE vs. Threshold (PPI 80%)\n"
      ]
     },
     {
@@ -956,7 +1187,7 @@
        "RWR                            0.0                    0.0  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,14 +1205,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability FS vs. Threshold (Protein 80%)\n"
+      "GAP-MINE vs. Threshold (Protein 80%)\n"
      ]
     },
     {
@@ -1085,7 +1316,7 @@
        "RWR                            0.0                    1.0  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1245,6 +1476,109 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GAP-MINE vs. Reference Methods\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>f_measure</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>mcc</th>\n",
+       "      <th>precision@15</th>\n",
+       "      <th>precision@20</th>\n",
+       "      <th>precision@n_positives</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Raw</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GenePANDA</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MaxLink</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           f_measure  precision  recall  mcc  precision@15  precision@20  \\\n",
+       "Raw              0.0        0.0     0.0  0.0           0.0           0.0   \n",
+       "GenePANDA        0.0        0.0     0.0  0.0           0.0           0.0   \n",
+       "MaxLink          0.0        0.0     0.0  0.0           0.0           0.0   \n",
+       "\n",
+       "           precision@n_positives  \n",
+       "Raw                          0.0  \n",
+       "GenePANDA                    0.0  \n",
+       "MaxLink                      0.0  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pairs={'Raw':[process_rwr_threshold, process_raw_threshold],\n",
+    "        'GenePANDA':[process_rwr_threshold, process_genepanda_threshold],\n",
+    "        'MaxLink':[process_rwr_threshold, process_maxlink_threshold]}\n",
+    "\n",
+    "print('GAP-MINE vs. Reference Methods')\n",
+    "hypothesis_testing(pairs, 'greater')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1253,14 +1587,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability FS vs. Threshold (PPI 80%)\n"
+      "GAP-MINE vs. Threshold (PPI 80%)\n"
      ]
     },
     {
@@ -1364,7 +1698,7 @@
        "RWR                            0.0                    0.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1382,14 +1716,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability FS vs. Threshold (Protein 80%)\n"
+      "GAP-MINE vs. Threshold (Protein 80%)\n"
      ]
     },
     {
@@ -1493,7 +1827,7 @@
        "RWR                        0.00001                0.00000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
