--- a/python/src/models/APID&HuRI Disease Classifiers Multiple FS.ipynb
+++ b/python/src/models/APID&HuRI Disease Classifiers Multiple FS.ipynb
@@ -211,7 +211,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "ppi80_hyper_list_conservative = []\n",
     "ppi80_closeness_list_conservative = []\n",
     "ppi80_betweenness_list_conservative = []\n",
@@ -1079,7 +1078,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
