--- a/python/src/models/APID&HuRI False Positive Classifiers.ipynb
+++ b/python/src/models/APID&HuRI False Positive Classifiers.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ebce7fbd",
    "metadata": {},
    "outputs": [],
@@ -29,6 +29,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aedc38bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%javascript\n",
+    "(function(on) {\n",
+    "const e=$( \"<a>Setup failed</a>\" );\n",
+    "const ns=\"js_jupyter_suppress_warnings\";\n",
+    "var cssrules=$(\"#\"+ns);\n",
+    "if(!cssrules.length) cssrules = $(\"<style id='\"+ns+\"' type='text/css'>div.output_stderr { } </style>\").appendTo(\"head\");\n",
+    "e.click(function() {\n",
+    "    var s='Showing';  \n",
+    "    cssrules.empty()\n",
+    "    if(on) {\n",
+    "        s='Hiding';\n",
+    "        cssrules.append(\"div.output_stderr, div[data-mime-type*='.stderr'] { display:none; }\");\n",
+    "    }\n",
+    "    e.text(s+' warnings (click to toggle)');\n",
+    "    on=!on;\n",
+    "}).click();\n",
+    "$(element).append(e);\n",
+    "})(true);"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "88438d25",
    "metadata": {},
@@ -38,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "b2d24ba9",
    "metadata": {},
    "outputs": [],
@@ -52,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "b202b541",
    "metadata": {},
    "outputs": [],
@@ -66,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "6aab1581",
    "metadata": {},
    "outputs": [],
@@ -80,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4be830ad",
    "metadata": {},
    "outputs": [],
@@ -93,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "b219c68f",
    "metadata": {},
    "outputs": [],
@@ -106,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "34308ea2",
    "metadata": {},
    "outputs": [],
@@ -119,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "4764f965",
    "metadata": {},
    "outputs": [],
@@ -145,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "a341d7c2",
    "metadata": {},
    "outputs": [],
@@ -245,25 +272,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "1e6974ae",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b6723c16a95849c2806501eab1a8129d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/429 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "importlib.reload(classifiers)\n",
     "clf = LogisticRegression(random_state=22)\n",
@@ -285,25 +297,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "bfc26d08",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e261660eaa2344418ffcaec9a9592ec0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/429 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "importlib.reload(classifiers)\n",
     "clf = LogisticRegression(random_state=22)\n",
@@ -325,25 +322,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "4173551e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "89f181c714a6473197ee8e73f0e5d4a6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/429 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "importlib.reload(classifiers)\n",
     "clf = LogisticRegression(random_state=22)\n",
@@ -373,25 +355,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "1d027842",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e4b7ca084df47cea9445f0e21a92e8e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/203 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "importlib.reload(classifiers)\n",
     "clf = LogisticRegression(random_state=22)\n",
@@ -413,25 +380,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "c66fbd26",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81910a6e8e5e4ee08d4c25da3a2bdf2b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/203 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "importlib.reload(classifiers)\n",
     "clf = LogisticRegression(random_state=22)\n",
@@ -453,25 +405,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "fdd2c624",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b941a797ef0f42fe9f222a50318a9a37",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/203 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "importlib.reload(classifiers)\n",
     "clf = LogisticRegression(random_state=22)\n",
@@ -493,25 +430,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "738e75f8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bbce87a8ead742f18962a6d81a58c2b9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/203 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "importlib.reload(classifiers)\n",
     "clf = LogisticRegression(random_state=22)\n",
@@ -533,25 +455,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "b6f242aa",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b03bc690cb943c98c3a34bfc2bf01ce",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/203 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "importlib.reload(classifiers)\n",
     "clf = LogisticRegression(random_state=22)\n",
@@ -581,25 +488,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "174e30f0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dcc475f10c8c4d88bbc7ff82e34baca8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/301 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "importlib.reload(classifiers)\n",
     "clf = LogisticRegression(random_state=22)\n",
@@ -621,25 +513,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "bba9553c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "061e1711d7624635bd435bac18db4930",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/301 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "importlib.reload(classifiers)\n",
     "clf = LogisticRegression(random_state=22)\n",
@@ -661,25 +538,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "fa244631",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc308a5efaa6470c96630be06f66214d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/301 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "importlib.reload(classifiers)\n",
     "clf = LogisticRegression(random_state=22)\n",
@@ -701,25 +563,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "2768caf5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c47235298e794ca69367bda841716535",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/301 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "importlib.reload(classifiers)\n",
     "clf = LogisticRegression(random_state=22)\n",
@@ -741,25 +588,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "7286941f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aeeb2da43d194e289fc5fd116eeb12ce",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/301 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "importlib.reload(classifiers)\n",
     "clf = LogisticRegression(random_state=22)\n",
@@ -782,7 +614,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
