--- a/python/src/models/Threshold Classifier - False Positives.ipynb
+++ b/python/src/models/Threshold Classifier - False Positives.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "57d1553f",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "93baca0e",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "2a395449",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
+   "id": "4aa40137",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "process_raw = pd.read_csv(\"../../data/processed/metrics/process_fp_raw.csv\", sep=',', header=0)\n",
+    "disease_raw = pd.read_csv(\"../../data/processed/metrics/disease_fp_raw.csv\", sep=',', header=0)\n",
+    "disease_conservative_raw = pd.read_csv(\"../../data/processed/metrics/disease_conservative_fp_raw.csv\", sep=',', header=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "0968bc67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "process_raw.columns = process_hypergeometric.columns\n",
+    "disease_raw.columns = disease_hypergeometric.columns\n",
+    "disease_conservative_raw.columns = disease_hypergeometric_conservative.columns\n",
+    "process_raw.index = process_hypergeometric.index\n",
+    "disease_raw.index = disease_hypergeometric.index\n",
+    "disease_conservative_raw.index = disease_hypergeometric_conservative.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "8c75c2eb",
    "metadata": {},
    "outputs": [],
@@ -92,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4efe035b",
    "metadata": {},
    "outputs": [],
@@ -100,7 +127,7 @@
     "disgenet_proteins_indexes_fp = pd.read_csv('../../data/processed/disgenet_protein_indexes_fp.csv')\n",
     "disgenet_proteins_indexes_conservative_fp = pd.read_csv('../../data/processed/disgenet_protein_indexes_conservative_fp.csv')\n",
     "disgenet_proteins_indexes_conservative_fp['fp_proteins_index'] = disgenet_proteins_indexes_conservative_fp['fp_proteins_index'].apply(literal_eval)\n",
-    "disgenet_proteins_indexes_fp['fp_proteins_index'] = disgenet_proteins_indexes_fp['fp_proteins_index'].apply(literal_eval"
+    "disgenet_proteins_indexes_fp['fp_proteins_index'] = disgenet_proteins_indexes_fp['fp_proteins_index'].apply(literal_eval)"
    ]
   },
   {
@@ -156,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a05a8ddb",
    "metadata": {},
    "outputs": [],
@@ -172,6 +199,18 @@
     "reactome_labels_df = pd.read_csv(\"../../data/processed/reactome_labels_fp.csv\", sep=',', names=reactome_proteins_indexes_df['process'].values)\n",
     "reactome_labels_df['protein_id'] = graph.vs['name']\n",
     "reactome_labels_df.set_index('protein_id', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "fa0ce1df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "process_raw_test_indices = pd.read_csv(\"../../data/processed/fs/process_fp_raw_test.csv\", sep=',', header=0).transpose().to_numpy(dtype='int')-1\n",
+    "disease_raw_test_indices = pd.read_csv(\"../../data/processed/fs/disease_fp_raw_test.csv\", sep=',', header=0).transpose().to_numpy(dtype='int')-1\n",
+    "disease_conservative_raw_test_indices = pd.read_csv(\"../../data/processed/fs/disease_conservative_fp_raw_test.csv\", sep=',', header=0).transpose().to_numpy(dtype='int')-1"
    ]
   },
   {
@@ -218,6 +257,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "id": "323f4782",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6c7f28435a244da8a4f1a8498b0a2bce",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/429 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "importlib.reload(classifiers)\n",
+    "process_raw_clf = classifiers.threshold_classifier_fp(process_raw, reactome_labels_df, process_raw_test_indices, op_metric='fmeasure')\n",
+    "process_raw_clf.to_csv('../../models/false_positive/threshold/process_raw.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "id": "2632b867",
    "metadata": {},
@@ -240,7 +306,7 @@
    "source": [
     "importlib.reload(classifiers)\n",
     "process_hypergeometric_clf = classifiers.threshold_classifier_fp(process_hypergeometric, reactome_labels_df, process_hypergeometric_test_indices, op_metric='fmeasure')\n",
-    "process_hypergeometric_clf.to_csv('../../models/apid_huri_fp/threshold/process_hypergeometric.csv', index=False)"
+    "process_hypergeometric_clf.to_csv('../../models/false_positive/threshold/process_hypergeometric.csv', index=False)"
    ]
   },
   {
@@ -267,7 +333,7 @@
    "source": [
     "importlib.reload(classifiers)\n",
     "process_closeness_clf = classifiers.threshold_classifier_fp(process_closeness, reactome_labels_df, process_closeness_test_indices, op_metric='fmeasure')\n",
-    "process_closeness_clf.to_csv('../../models/apid_huri_fp/threshold/process_closeness.csv', index=False)"
+    "process_closeness_clf.to_csv('../../models/false_positive/threshold/process_closeness.csv', index=False)"
    ]
   },
   {
@@ -294,7 +360,7 @@
    "source": [
     "importlib.reload(classifiers)\n",
     "process_betweenness_clf = classifiers.threshold_classifier_fp(process_betweenness, reactome_labels_df, process_betweenness_test_indices, op_metric='fmeasure')\n",
-    "process_betweenness_clf.to_csv('../../models/apid_huri_fp/threshold/process_betweenness.csv', index=False)"
+    "process_betweenness_clf.to_csv('../../models/false_positive/threshold/process_betweenness.csv', index=False)"
    ]
   },
   {
@@ -321,7 +387,7 @@
    "source": [
     "importlib.reload(classifiers)\n",
     "process_fraction_betweenness_clf = classifiers.threshold_classifier_fp(process_fraction_betweenness, reactome_labels_df, process_fraction_betweenness_test_indices, op_metric='fmeasure')\n",
-    "process_fraction_betweenness_clf.to_csv('../../models/apid_huri_fp/threshold/process_fraction_betweenness.csv', index=False)"
+    "process_fraction_betweenness_clf.to_csv('../../models/false_positive/threshold/process_fraction_betweenness.csv', index=False)"
    ]
   },
   {
@@ -348,7 +414,7 @@
    "source": [
     "importlib.reload(classifiers)\n",
     "process_rwr_clf = classifiers.threshold_classifier_fp(process_rwr, reactome_labels_df, process_rwr_test_indices, op_metric='fmeasure')\n",
-    "process_rwr_clf.to_csv('../../models/apid_huri_fp/threshold/process_rwr.csv', index=False)"
+    "process_rwr_clf.to_csv('../../models/false_positive/threshold/process_rwr.csv', index=False)"
    ]
   },
   {
@@ -357,6 +423,33 @@
    "metadata": {},
    "source": [
     "## 1.2. SCA Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "18d40ad0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "73cd8b949d3a4e82b607048efd2d86f1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/203 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "importlib.reload(classifiers)\n",
+    "disease_raw_clf = classifiers.threshold_classifier_fp(disease_raw, disgenet_labels_df, disease_raw_test_indices, op_metric='fmeasure')\n",
+    "disease_raw_clf.to_csv('../../models/false_positive/threshold/disease_raw.csv', index=False)"
    ]
   },
   {
@@ -385,7 +478,7 @@
    "source": [
     "importlib.reload(classifiers)\n",
     "disease_hypergeometric_clf = classifiers.threshold_classifier_fp(disease_hypergeometric, disgenet_labels_df, disease_hypergeometric_test_indices, op_metric='fmeasure')\n",
-    "disease_hypergeometric_clf.to_csv('../../models/apid_huri_fp/threshold/disease_hypergeometric.csv', index=False)"
+    "disease_hypergeometric_clf.to_csv('../../models/false_positive/threshold/disease_hypergeometric.csv', index=False)"
    ]
   },
   {
@@ -412,7 +505,7 @@
    "source": [
     "importlib.reload(classifiers)\n",
     "disease_closeness_clf = classifiers.threshold_classifier_fp(disease_closeness, disgenet_labels_df, disease_closeness_test_indices, op_metric='fmeasure')\n",
-    "disease_closeness_clf.to_csv('../../models/apid_huri_fp/threshold/disease_closeness.csv', index=False)"
+    "disease_closeness_clf.to_csv('../../models/false_positive/threshold/disease_closeness.csv', index=False)"
    ]
   },
   {
@@ -439,7 +532,7 @@
    "source": [
     "importlib.reload(classifiers)\n",
     "disease_betweenness_clf = classifiers.threshold_classifier_fp(disease_betweenness, disgenet_labels_df, disease_betweenness_test_indices, op_metric='fmeasure')\n",
-    "disease_betweenness_clf.to_csv('../../models/apid_huri_fp/threshold/disease_betweenness.csv', index=False)"
+    "disease_betweenness_clf.to_csv('../../models/false_positive/threshold/disease_betweenness.csv', index=False)"
    ]
   },
   {
@@ -466,7 +559,7 @@
    "source": [
     "importlib.reload(classifiers)\n",
     "disease_fraction_betweenness_clf = classifiers.threshold_classifier_fp(disease_fraction_betweenness, disgenet_labels_df, disease_fraction_betweenness_test_indices, op_metric='fmeasure')\n",
-    "disease_fraction_betweenness_clf.to_csv('../../models/apid_huri_fp/threshold/disease_fraction_betweenness.csv', index=False)"
+    "disease_fraction_betweenness_clf.to_csv('../../models/false_positive/threshold/disease_fraction_betweenness.csv', index=False)"
    ]
   },
   {
@@ -495,7 +588,7 @@
    "source": [
     "importlib.reload(classifiers)\n",
     "disease_rwr_clf = classifiers.threshold_classifier_fp(disease_rwr, disgenet_labels_df, disease_rwr_test_indices, op_metric='fmeasure')\n",
-    "disease_rwr_clf.to_csv('../../models/apid_huri_fp/threshold/disease_rwr.csv', index=False)"
+    "disease_rwr_clf.to_csv('../../models/false_positive/threshold/disease_rwr.csv', index=False)"
    ]
   },
   {
@@ -504,6 +597,33 @@
    "metadata": {},
    "source": [
     "## 1.3. Conservative Module Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "932b5d83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9aba57eff2044f088d9bab01fae6103c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/301 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "importlib.reload(classifiers)\n",
+    "disease_raw_clf_conservative = classifiers.threshold_classifier_fp(disease_conservative_raw, disgenet_labels_conservative_df, disease_conservative_raw_test_indices, op_metric='fmeasure')\n",
+    "disease_raw_clf_conservative.to_csv('../../models/false_positive/threshold/disease_raw_conservative.csv', index=False)"
    ]
   },
   {
@@ -530,7 +650,7 @@
    "source": [
     "importlib.reload(classifiers)\n",
     "disease_hypergeometric_clf_conservative = classifiers.threshold_classifier_fp(disease_hypergeometric_conservative, disgenet_labels_conservative_df, disease_hypergeometric_test_indices_conservative, op_metric='fmeasure')\n",
-    "disease_hypergeometric_clf_conservative.to_csv('../../models/apid_huri_fp/threshold/disease_hypergeometric_conservative.csv', index=False)"
+    "disease_hypergeometric_clf_conservative.to_csv('../../models/false_positive/threshold/disease_hypergeometric_conservative.csv', index=False)"
    ]
   },
   {
@@ -557,7 +677,7 @@
    "source": [
     "importlib.reload(classifiers)\n",
     "disease_closeness_clf_conservative = classifiers.threshold_classifier_fp(disease_closeness_conservative, disgenet_labels_conservative_df, disease_closeness_test_indices_conservative, op_metric='fmeasure')\n",
-    "disease_closeness_clf_conservative.to_csv('../../models/apid_huri_fp/threshold/disease_closeness_conservative.csv', index=False)"
+    "disease_closeness_clf_conservative.to_csv('../../models/false_positive/threshold/disease_closeness_conservative.csv', index=False)"
    ]
   },
   {
@@ -584,7 +704,7 @@
    "source": [
     "importlib.reload(classifiers)\n",
     "disease_betweenness_clf_conservative = classifiers.threshold_classifier_fp(disease_betweenness_conservative, disgenet_labels_conservative_df, disease_betweenness_test_indices_conservative, op_metric='fmeasure')\n",
-    "disease_betweenness_clf_conservative.to_csv('../../models/apid_huri_fp/threshold/disease_betweenness_conservative.csv', index=False)"
+    "disease_betweenness_clf_conservative.to_csv('../../models/false_positive/threshold/disease_betweenness_conservative.csv', index=False)"
    ]
   },
   {
@@ -611,7 +731,7 @@
    "source": [
     "importlib.reload(classifiers)\n",
     "disease_fraction_betweenness_clf_conservative = classifiers.threshold_classifier_fp(disease_fraction_betweenness_conservative, disgenet_labels_conservative_df, disease_fraction_betweenness_test_indices_conservative, op_metric='fmeasure')\n",
-    "disease_fraction_betweenness_clf_conservative.to_csv('../../models/apid_huri_fp/threshold/disease_fraction_betweenness_conservative.csv', index=False)"
+    "disease_fraction_betweenness_clf_conservative.to_csv('../../models/false_positive/threshold/disease_fraction_betweenness_conservative.csv', index=False)"
    ]
   },
   {
@@ -638,7 +758,7 @@
    "source": [
     "importlib.reload(classifiers)\n",
     "disease_rwr_conservative_clf = classifiers.threshold_classifier_fp(disease_rwr_conservative, disgenet_labels_conservative_df, disease_rwr_test_indices_conservative, op_metric='fmeasure')\n",
-    "disease_rwr_conservative_clf.to_csv('../../models/apid_huri_fp/threshold/disease_rwr_conservative.csv', index=False)"
+    "disease_rwr_conservative_clf.to_csv('../../models/false_positive/threshold/disease_rwr_conservative.csv', index=False)"
    ]
   }
  ],
