--- a/python/src/models/Threshold Classifier Processes APID&HuRI.ipynb
+++ b/python/src/models/Threshold Classifier Processes APID&HuRI.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "46406049",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "{'divide': 'warn', 'over': 'warn', 'under': 'ignore', 'invalid': 'warn'}"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,6 +36,18 @@
     "import concurrent.futures\n",
     "import matplotlib.pyplot as plt\n",
     "np.seterr(divide='ignore', invalid='ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9a93effc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reactome_raw = pd.read_csv(\"../../data/processed/metrics/process_raw.csv\", sep=',', header=0, index_col=0)\n",
+    "reactome_genepanda = pd.read_csv(\"../../data/processed/metrics/process_genepanda.csv\", sep=',', header=0, index_col=0)\n",
+    "reactome_maxlink = pd.read_csv(\"../../data/processed/metrics/process_maxlink.csv\", sep=',', header=0, index_col=0)"
    ]
   },
   {
@@ -66,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "7f346197",
    "metadata": {},
    "outputs": [],
@@ -99,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "a05a8ddb",
    "metadata": {},
    "outputs": [],
@@ -107,6 +119,26 @@
     "reactome_labels_df = pd.read_csv(\"../../data/processed/reactome_labels_apid_huri.csv\", sep=',', names=reactome_proteins_indexes_df['process'].values)\n",
     "reactome_labels_df['protein_id'] = graph.vs['name']\n",
     "reactome_labels_df.set_index('protein_id', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "765c5030",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "protein80_ppis = np.load(\"../../data/processed/ppis/ppis_red_protein80_apid_huri.npy\", allow_pickle=True)\n",
+    "protein80_raw_list = []\n",
+    "protein_label_list = []\n",
+    "for i in range(1,11):\n",
+    "    protein80_ppis_df = pd.DataFrame(protein80_ppis[i-1,:,0:2]).replace(0, np.nan).dropna()\n",
+    "    proteins_protein80 = set(list(set(protein80_ppis_df[0].values))+list(set(protein80_ppis_df[1].values)))\n",
+    "    reactome_raw_protein80 = pd.read_csv(\"../../data/processed/metrics/reactome_protein80_\"+str(i)+\".csv\")\n",
+    "    reactome_raw_protein80.columns = reactome_labels_df.columns\n",
+    "    reactome_raw_protein80.index = reactome_labels_df[reactome_labels_df.index.isin(proteins_protein80)].index\n",
+    "    protein80_raw_list.append(reactome_raw_protein80)\n",
+    "    protein_label_list.append(reactome_labels_df[reactome_labels_df.index.isin(proteins_protein80)])"
    ]
   },
   {
@@ -175,16 +207,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
+   "id": "dba0c84d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reactome_raw_test_indices = pd.read_csv(\"../../data/processed/fs/process_raw_test.csv\", sep=',', header=0).transpose().to_numpy(dtype='int')-1\n",
+    "reactome_genepanda_test_indices = pd.read_csv(\"../../data/processed/fs/reactome_genepanda_test_apid_huri.csv\", sep=',', header=0).transpose().to_numpy(dtype='int')-1\n",
+    "reactome_maxlink_test_indices = pd.read_csv(\"../../data/processed/fs/reactome_maxlink_test_apid_huri.csv\", sep=',', header=0).transpose().to_numpy(dtype='int')-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9110ca0c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "reactome_hypergeometric_test_indices = pd.read_csv(\"../../data/processed/fs/reactome_hyper_test_apid_huri.csv\", sep=',', header=0, dtype='Int64', names=reactome_hypergeometric.columns)-1\n",
-    "reactome_closeness_test_indices = pd.read_csv(\"../../data/processed/fs/reactome_closeness_test_apid_huri.csv\", sep=',', header=0, dtype='Int64', names=reactome_closeness.columns)-1\n",
-    "reactome_betweenness_test_indices = pd.read_csv(\"../../data/processed/fs/reactome_betweenness_test_apid_huri.csv\", sep=',', header=0, dtype='Int64', names=reactome_betweenness.columns)-1\n",
-    "reactome_rwr_test_indices = pd.read_csv(\"../../data/processed/fs/reactome_rwr_test_apid_huri.csv\", sep=',', header=0, dtype='Int64', names=reactome_rwr.columns)-1\n",
-    "reactome_fraction_betweenness_test_indices = pd.read_csv(\"../../data/processed/fs/reactome_fraction_betweenness_test_apid_huri.csv\", sep=',', header=0, dtype='Int64', names=reactome_fraction_betweenness.columns)-1\n",
+    "reactome_hypergeometric_test_indices = pd.read_csv(\"../../data/processed/fs/reactome_hyper_test_apid_huri.csv\", sep=',', header=0).transpose().to_numpy(dtype='int')-1\n",
+    "reactome_closeness_test_indices = pd.read_csv(\"../../data/processed/fs/reactome_closeness_test_apid_huri.csv\", sep=',', header=0).transpose().to_numpy(dtype='int')-1\n",
+    "reactome_betweenness_test_indices = pd.read_csv(\"../../data/processed/fs/reactome_betweenness_test_apid_huri.csv\", sep=',', header=0).transpose().to_numpy(dtype='int')-1\n",
+    "reactome_rwr_test_indices = pd.read_csv(\"../../data/processed/fs/reactome_rwr_test_apid_huri.csv\", sep=',', header=0).transpose().to_numpy(dtype='int')-1\n",
+    "reactome_fraction_betweenness_test_indices = pd.read_csv(\"../../data/processed/fs/reactome_fraction_betweenness_test_apid_huri.csv\", sep=',', header=0).transpose().to_numpy(dtype='int')-1\n",
     "\n",
     "reactome_hypergeometric_80_test_index = np.array(np.array_split(pd.read_csv(\"../../data/processed/fs/reactome_hyper_80_test_apid_huri.csv\", sep=',', header=0).transpose(), 10, axis = 1)).astype(int) -1\n",
     "reactome_closeness_80_test_index = np.array(np.array_split(pd.read_csv(\"../../data/processed/fs/reactome_closeness_80_test_apid_huri.csv\", sep=',', header=0).transpose(), 10, axis = 1)).astype(int) -1\n",
@@ -205,6 +249,72 @@
    "metadata": {},
    "source": [
     "# 1. Threshold Classifier - Complete Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcccc859",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(classifiers)\n",
+    "raw_simple_clf = classifiers.threshold_classifier(reactome_raw, reactome_labels_df, reactome_raw_test_indices, op_metric='fmeasure')\n",
+    "raw_simple_clf.to_csv('../../models/threshold_classifier/process/process_raw_simple.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "95b22e74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a737f0ddb81a4f8eb41c1e287e312b19",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/429 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "importlib.reload(classifiers)\n",
+    "genepanda_simple_clf = classifiers.threshold_classifier(reactome_genepanda, reactome_labels_df, reactome_genepanda_test_indices, op_metric='fmeasure')\n",
+    "genepanda_simple_clf.to_csv('../../models/threshold_classifier/process/process_genepanda_simple.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "aa6ae240",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3447f7e24d124f0fbc68914533271e93",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/429 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "importlib.reload(classifiers)\n",
+    "maxlink_simple_clf = classifiers.threshold_classifier(reactome_maxlink, reactome_labels_df, reactome_maxlink_test_indices, op_metric='fmeasure')\n",
+    "maxlink_simple_clf.to_csv('../../models/threshold_classifier/process/process_maxlink_simple.csv', index=False)"
    ]
   },
   {
@@ -363,6 +473,173 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "300c16ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "10bff51788e143f3965bf3c2bf74ffa0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "072777341b8d4fa78b119411a33d6c13",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/429 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bd52cbe54d2c4453be4e6a2bea3ee634",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/429 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "953f4b1c8d6547e89699ffa34fa7de2c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/429 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "75a8384e28e84dc7b0d2c2d9ae5ce193",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/429 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7aca63dce4094778a108732af8b5b9ee",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/429 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "51db80f63daf46f39688f08eebe9d320",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/429 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "369b8042cf2f44c5be001b6481150075",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/429 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9f843b34ac7f49b49527c94a637e35b4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/429 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "216016ff6bea4668ad93891a3e689ed7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/429 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "aa4336c8175147bc82a12585ea037bf5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/429 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "importlib.reload(classifiers)\n",
+    "raw_protein80_simple_clf = classifiers.reduced_classifier_threshold(protein80_raw_list, np.moveaxis(reactome_raw_protein80_test_index, 1, 0), protein_label_list)\n",
+    "raw_protein80_simple_clf.to_csv('../../models/threshold_classifier/process/process_raw_protein80_simple.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "09edc1a2",
    "metadata": {},
@@ -423,9 +700,6 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "42555cd0c5f1594a81e40866f5733b2cbf65026c937bf0149d49f47f234897c3"
-  },
   "kernelspec": {
    "display_name": "Python 3.8.8 ('base')",
    "language": "python",
@@ -442,6 +716,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "42555cd0c5f1594a81e40866f5733b2cbf65026c937bf0149d49f47f234897c3"
+   }
   }
  },
  "nbformat": 4,
