--- a/python/src/GenePlexus/src/GenePlexus_network.ipynb
+++ b/python/src/GenePlexus/src/GenePlexus_network.ipynb
@@ -213,21 +213,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\alexf\\anaconda3\\lib\\site-packages\\pandas\\core\\internals\\managers.py:1765: RuntimeWarning: invalid value encountered in cast\n",
-      "  arr = arr.astype(dtype, copy=False)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "process_labels = pd.read_csv('../../../data/processed/reactome_labels_string.csv', header=None)\n",
     "test_indices = pd.read_csv(\"../../../data/processed/fs/reactome_rwr_test_string.csv\", sep=',', header=0).transpose().to_numpy(dtype='int')-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "disease_labels = pd.read_csv('../../../data/processed/disgenet_sca_labels_string.csv', header=None)\n",
+    "disease_test_indices = pd.read_csv(\"../../../data/processed/fs/disease/disease_rwr_test_string.csv\", sep=',', header=0).transpose().to_numpy(dtype='int')-1\n",
+    "\n",
+    "disease_conservative_labels = pd.read_csv('../../../data/processed/disgenet_conservative_labels_string.csv', header=None)\n",
+    "disease_conservative_test_indices = pd.read_csv(\"../../../data/processed/fs/disease/disease_rwr_test_conservative_string.csv\", sep=',', header=0).transpose().to_numpy(dtype='int')-1"
    ]
   },
   {
@@ -240,7 +244,10 @@
     "for i in tqdm(range(len(process_labels.columns))):\n",
     "    mdl_weights, df_probs, avgps, auprc_random, precision_k_random = myclass.fit_and_predict(process_labels[i], test_indices[i])\n",
     "    clf_dict['auprc_random'].append(auprc_random)\n",
-    "    clf_dict['precision_k_random'].append(precision_k_random)"
+    "    clf_dict['precision_k_random'].append(precision_k_random)\n",
+    "\n",
+    "clf_df = pd.DataFrame.from_dict(clf_dict)\n",
+    "clf_df.to_csv('../../../models/threshold_classifier/STRING/geneplexus.csv', index=False)"
    ]
   },
   {
@@ -249,8 +256,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "clf_dict = {'auprc_random':[], 'precision_k_random':[]}\n",
+    "for i in tqdm(range(len(process_labels.columns))):\n",
+    "    mdl_weights, df_probs, avgps, auprc_random, precision_k_random = myclass.fit_and_predict(disease_labels[i], disease_test_indices[i])\n",
+    "    clf_dict['auprc_random'].append(auprc_random)\n",
+    "    clf_dict['precision_k_random'].append(precision_k_random)\n",
+    "\n",
     "clf_df = pd.DataFrame.from_dict(clf_dict)\n",
-    "clf_df.to_csv('../../../models/threshold_classifier/STRING/geneplexus.csv', index=False)"
+    "clf_df.to_csv('../../../models/threshold_classifier/STRING/disease_geneplexus.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_dict = {'auprc_random':[], 'precision_k_random':[]}\n",
+    "for i in tqdm(range(len(process_labels.columns))):\n",
+    "    mdl_weights, df_probs, avgps, auprc_random, precision_k_random = myclass.fit_and_predict(disease_conservative_labels[i], disease_conservative_test_indices[i])\n",
+    "    clf_dict['auprc_random'].append(auprc_random)\n",
+    "    clf_dict['precision_k_random'].append(precision_k_random)\n",
+    "\n",
+    "clf_df = pd.DataFrame.from_dict(clf_dict)\n",
+    "clf_df.to_csv('../../../models/threshold_classifier/STRING/disease_conservative_geneplexus.csv', index=False)"
    ]
   }
  ],
@@ -275,7 +304,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a91554a5e44b4cc609917fc90fb7ad510cda6c3a7bcec5be1f9eaac843308f8a"
+    "hash": "42555cd0c5f1594a81e40866f5733b2cbf65026c937bf0149d49f47f234897c3"
    }
   }
  },
